# Proyecto2

./: AplicacionADN.cpp  AplicacionADN.h  CMakeLists.txt  ContEnfermedades.cpp  ContEnfermedades.h  ContPacientes.cpp  ContPacientes.h  Enfermedad.cpp  Enfermedad.h  IReporte.cpp  IReporte.h  Paciente.cpp  Paciente.h  RepAnalisis1.cpp  RepAnalisis1.h  RepAnalisis2.cpp  RepAnalisis2.h  RepAnalsis3.cpp  RepAnalsis3.h  main.cpp
